Add license headers and do a minor cleanup